<resources>
    <string name="app_name">Android_1.3</string>
    <string name="description">Comprehensive health monitoring application.\nDesigned by Victor.</string>
    <string name="top_pressure">Top pressure</string>
    <string name="top_pressure_helper">Enter your top pressure</string>
    <string name="lower_pressure">Lower pressure</string>
    <string name="lower_pressure_helper">Enter your lower pressure</string>
    <string name="tachycardia">Tachycardia</string>
    <string name="tachycardia_helper">Check if there is tachycardia</string>
    <string name="pulse">Pulse</string>
    <string name="pulse_helper">Enter your pulse</string>
    <string name="weight">Weight</string>
    <string name="weight_helper">Enter your weight</string>
    <string name="number_of_steps">Steps</string>
    <string name="number_of_steps_helper">Enter number of steps</string>
    <string name="date_time">Enter date and time</string>
    <string name="name">Name</string>
    <string name="name_helper">Enter your name and surname</string>
    <string name="age">Age</string>
    <string name="age_helper">Enter your age </string>
    <string name="life_indicators_Btn">Life indicators</string>
    <string name="medical_indicators_Btn">Medical indicators</string>
    <string name="saveBtn">Save data</string>
    <string name="error_input_age">Age must be integer and not be empty</string>
    <string name="error_input_name">The name does not contain numbers and be empty</string>
    <string name="go_main_btn">Main page</string>
    <string name="error_input_life">Weight is an integer\nSteps is an integer</string>
    <string name="error_input_medic">Top pressure is an integer\nLower pressure is an integer</string>
    <string name="add_success">Data added</string>
</resources>
