<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    tools:context=".MedicalIndicatorsActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/medic_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/medic_card_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="5"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="2dp">

        <!-- Image, title, secondary and enter text and checkbox and saveBtn-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Image, title and secondary-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="134dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_doctor_2" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/app_name"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />


                </LinearLayout>

            </LinearLayout>


            <!-- Enter text, checkbox and saveBtn-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterTopPressureTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/top_pressure"
                app:helperText="@string/top_pressure_helper"
                app:helperTextEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterLowPressureTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lower_pressure"
                app:helperText="@string/lower_pressure_helper"
                app:helperTextEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/tacCheck"
                        style="checkboxStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/tachycardia_helper"
                        app:useMaterialThemeColors="true" />

                    <Button
                        android:id="@+id/saveBtnMedic"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/saveBtn" />

                </RelativeLayout>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Navigation buttons -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/medic_card_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medic_card"
        app:layout_constraintVertical_weight="1"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="2dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/goLifeIndicatorsBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="8dp"
                android:text="@string/life_indicators_Btn" />

            <Button
                android:id="@+id/goMainBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="8dp"
                android:text="@string/go_main_btn" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
