<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    tools:context=".LifeIndicatorsActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/life_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/life_card_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="5"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="2dp">

        <!-- Image, title, secondary and enter text and saveBtn-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Image, title and secondary-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="134dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_doctor_2" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/app_name"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />


                </LinearLayout>

            </LinearLayout>


            <!-- Enter text and saveBtn-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterWeightTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                app:helperText="@string/weight_helper"
                app:helperTextEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enterStepsTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_steps"
                app:helperText="@string/number_of_steps_helper"
                app:helperTextEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/saveLifeBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/saveBtn" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Navigation buttons -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/life_card_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/life_card"
        app:layout_constraintVertical_weight="1"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="2dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/goMainBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="8dp"
                android:text="@string/go_main_btn" />

            <Button
                android:id="@+id/goMedicalIndicatorsBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="8dp"
                android:text="@string/medical_indicators_Btn" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
