<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/std_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_report"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_name"
        android:layout_marginTop="@dimen/std_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_logo" />

    <EditText
        android:id="@+id/enter_age"
        android:layout_marginTop="@dimen/std_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_name" />

    <ImageButton
        android:id="@+id/go_pulse"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_thermometer"
        app:layout_constraintEnd_toStartOf="@id/go_pressure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/go_pressure"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_cardiogram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/go_pulse" />


</androidx.constraintlayout.widget.ConstraintLayout>